[tool.poetry]
name = "treadmill-tools"
version = "0.1.0"
description = ""
authors = ["Martin Esparza <martinesparza22.me@gmail.com>"]
readme = "README.md"
packages = [{include = "treadmill_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
